[package]
name = "wall-a"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
argh = "0.1.12"
crc32fast = "1.4.2"
glob = "0.3.1"
indexmap = "2.3.0"
itertools = "0.13.0"
jiff = "0.1.4"
minicbor = { version = "0.24.2", features = ["derive", "std"] }
serde = "1.0.204"
serde_json = { version = "1.0.122", features = ["preserve_order"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uom = { version = "0.36.0", default-features = false, features = [
    "std",
    "u64",
    "si",
] }
zerocopy = { version = "0.7.35", features = ["derive"] }
zstd = "0.13.2"
